[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scGSEA"
version = "0.0.2.1"
authors = [
  { name="John Jun", email="johnjun094@cloud.ucsd.edu" },
]
maintainers = [
    { name="John Jun", email="johnjun094@cloud.ucsd.edu" },
]
description = "Gene Set Enrichment Analysis (GSEA) method for elucidating biological pathway and process activation in single cell gene expression data"

keywords = ["scgsea", "ssgsea", "gsea", "single cell"]

dependencies = [
  "tqdm==4.65.0", 
  "numpy==1.23.1", 
  "matplotlib==3.6.1",
  "scanpy==1.9.1",
  "pandas==1.4.4", 
  "anndata>=0.8.0",
  "seaborn==0.12.0", 
  "scipy==1.9.2",
  "networkx==2.8.7", 
  "xlsxwriter==3.0.3",
  "openpyxl==3.0.9",
  "mygene==3.2.2",
  "humanfriendly==10.0"
]

readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/johnjun094/scGSEA"
"Bug Tracker" = "https://github.com/johnjun094/scGSEA/issues"